# rae

./: .gitconfig  .gitignore  README.md  package.json  rae_engineering_standards.md
.cursor/rules/: ai-generated-commit-message-rule.md  ai-generated-commit-message-rule.mdc  all-modules-must-include-tests.md  all-modules-must-include-tests.mdc  commits-to-main.md  commits-to-main.mdc  minimal-dependencies.md  minimal-dependencies.mdc  no-side-effects-in-main-modules.md  no-side-effects-in-main-modules.mdc  strict-schema-enforcement.md  strict-schema-enforcement.mdc
docs/developer/: scheduler-architecture.md  scheduler-job-examples.md  scheduler-testing-guide.md
docs/engineering/: development-setup.md  work-items.md
docs/engineering/work-items/: HIGH-CORE-001-scheduler-implementation.md  HIGH-INTEGRATION-001-scheduler-cli-integration.md  README.md  template.md  (+3 more)
docs/specs/: functional_spec.md
docs/user/: cron-syntax-reference.md  scheduler-guide.md  scheduler-troubleshooting.md
src/agent/: Cargo.toml
src/agent/src/: lib.rs  main.rs  tray.rs
src/agent/src/api/: mod.rs
src/agent/src/core/: mod.rs
src/agent/src/modules/: mod.rs
src/agent/src/scheduler/: cli.rs  executor.rs  job.rs  mod.rs  monitor.rs  parser.rs  persistence.rs  queue.rs
src/agent/src/schemas/: mod.rs
src/agent/src/tests/: mod.rs
src/agent/src/ui/: mod.rs
src/browser-extension/: README.md
src/electron-app/: README.md  SUCCESS.md  main.js  package-lock.json  package.json  simple-menu-bar.js  test-menu-bar.js
src/experimental-ui-shell/: README.md
src/plugin-devkit/: README.md
