[package]
name = "rae-agent"
version = "0.1.0"
edition = "2024"
authors = ["Rae Team"]
description = "Local-first, privacy-respecting AI assistant platform"
license = "MIT"
repository = "https://github.com/rae-project/rae"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Web and API
# axum = "0.7"
# tower = "0.4"
# tower-http = { version = "0.5", features = ["cors", "trace"] }
# websocket = "0.26"

# Security and validation
# ring = "0.17"
# sha2 = "0.10"
# jsonwebtoken = "9.0"
# idna = "=0.5.0"

# File system and storage
# walkdir = "2.4"
# notify = "6.1"

# File operations
open = "4.0"
dirs = "5.0"

# Schema validation
# jsonschema = "0.17"

# Testing
tokio-test = "0.4"
mockall = "0.12"

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "performance"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true 